# GccTrace

./: .gitattributes  .gitmodules  CMakeLists.txt
docker/: dev.dockerfile
include/: comm.h  perf_output.h  plugin.h  tracking.h
src/: perf_output.cc  plugin.cc  tracking.cc
test/: CMakeLists.txt  test.cc
